--- a/Config + Basic Plugins + Instruction/config.json
+++ b/Config + Basic Plugins + Instruction/config.json
@@ -1,6 +1,6 @@
 {
-  "bot_token": "MTAyOTMyNjk2NDMyNDA1MzAzMw.GceaRW.Nep29tGQUXc7BvkYH1SOhtCFMQesRzTk5pPYs0",
-  "BackupInterval": 1,
+  "bot_token": "YOUR_BOT_TOKEN",
+  "BackupInterval": 1200,
   "BotActivityStatus": "Send help",
 }
 
